--- a/templates/base.html
+++ b/templates/base.html
@@ -11,14 +11,10 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="{% static 'css/mycss.css' %}">
   <link rel="icon" type="image/x-icon" href="https://avatars.githubusercontent.com/u/122358662?s=400&u=d95a44ffb7bd8fbfa693f7c40fe3340a019ab6f5&v=4">
-  <link href="{% static 'fontawesomefree/css/fontawesome.css' %}" rel="stylesheet" type="text/css">
-  <link href="{% static 'fontawesomefree/css/brands.css' %}" rel="stylesheet" type="text/css">
-  <link href="{% static 'fontawesomefree/css/solid.css' %}" rel="stylesheet" type="text/css">
   <style>
 
   </style>
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Allerta+Stencil&display=swap');
 
     body {
 
@@ -39,7 +35,7 @@
       font-size: 1.25rem;
       line-height: 1;
       background-color: transparent;
-      border: 1px solid white;
+      border: 1px solid rgb(0, 0, 0);
 
     }
 
@@ -175,140 +171,89 @@
   {% block body %}
   {% endblock body %}
   <!-- Footer -->
-  <div class="">
+ <!-- Footer -->
+<footer class="text-center text-lg-start text-white" style="background-color: #1c2331">
+  <!-- Section: Social media -->
+  <section class="d-flex justify-content-between p-4" style="background-color: #ff0000">
+      <!-- Left -->
+      <div class="me-5">
+          <span>Connect with us on social media:</span>
+      </div>
+      <!-- Left -->
+  </section>
+  <!-- Section: Social media -->
 
-    <!-- Footer -->
-    <footer class="text-center text-lg-start text-white" style="background-color: #1c2331">
-      <!-- Section: Social media -->
-      <section class="d-flex justify-content-between p-4" style="background-color: #ff0000">
-        <!-- Left -->
-        <div class="me-5">
-          <span>Get connected with us on social networks:</span>
-        </div>
-        <!-- Left -->
-
-        <!-- Right -->
-        <div>
-          <a href="" class="text-white me-4">
-            <i class="fab fa-facebook-f"></i>
-          </a>
-          <a href="" class="text-white me-4">
-            <i class="fab fa-twitter"></i>
-          </a>
-          <a href="" class="text-white me-4">
-            <i class="fab fa-google"></i>
-          </a>
-          <a href="" class="text-white me-4">
-            <i class="fab fa-instagram"></i>
-          </a>
-          <a href="" class="text-white me-4">
-            <i class="fab fa-linkedin"></i>
-          </a>
-          <a href="" class="text-white me-4">
-            <i class="fab fa-github"></i>
-          </a>
-        </div>
-        <!-- Right -->
-      </section>
-      <!-- Section: Social media -->
-
-      <!-- Section: Links  -->
-      <section class="">
-        <div class="container text-center text-md-start mt-5">
-          <!-- Grid row -->
-          <div class="row mt-3">
-            <!-- Grid column -->
-            <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+  <!-- Section: Links -->
+  <section class="container text-center text-md-start mt-5">
+      <!-- Grid row -->
+      <div class="row mt-3">
+          <!-- Grid column -->
+          <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
               <!-- Content -->
               <h6 class="text-uppercase fw-bold">The Sachin & Chandan Store</h6>
-              <hr class="mb-4 mt-0 d-inline-block mx-auto"
-                style="width: 60px; background-color: #7c4dff; height: 2px" />
+              <hr class="mb-4 mt-0 d-inline-block mx-auto" style="width: 60px; background-color: #7c4dff; height: 2px" />
               <p>
-                Here you can use rows and columns to organize your footer
-                content. Lorem ipsum dolor sit amet, consectetur adipisicing
-                elit.
+                  Welcome to The Sachin & Chandan Store. We provide high-quality products and excellent customer service.
               </p>
-            </div>
-            <!-- Grid column -->
+          </div>
+          <!-- Grid column -->
 
-            <!-- Grid column -->
-            <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+          <!-- Grid column -->
+          <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
               <!-- Links -->
               <h6 class="text-uppercase fw-bold">Products</h6>
-              <hr class="mb-4 mt-0 d-inline-block mx-auto"
-                style="width: 60px; background-color: #7c4dff; height: 2px" />
+              <hr class="mb-4 mt-0 d-inline-block mx-auto" style="width: 60px; background-color: #7c4dff; height: 2px" />
               <p>
-                <a href="#!" class="text-white">MDBootstrap</a>
+                  <a href="#!" class="text-white">MDBootstrap</a>
               </p>
               <p>
-                <a href="#!" class="text-white">MDWordPress</a>
+                  <a href="#!" class="text-white">MDWordPress</a>
               </p>
               <p>
-                <a href="#!" class="text-white">BrandFlow</a>
+                  <a href="#!" class="text-white">BrandFlow</a>
               </p>
-              <p>
-                <a href="#!" class="text-white">Bootstrap Angular</a>
-              </p>
-            </div>
-            <!-- Grid column -->
+          </div>
+          <!-- Grid column -->
 
-            <!-- Grid column -->
-            <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+          <!-- Grid column -->
+          <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
               <!-- Links -->
               <h6 class="text-uppercase fw-bold">Useful links</h6>
-              <hr class="mb-4 mt-0 d-inline-block mx-auto"
-                style="width: 60px; background-color: #7c4dff; height: 2px" />
+              <hr class="mb-4 mt-0 d-inline-block mx-auto" style="width: 60px; background-color: #7c4dff; height: 2px" />
               <p>
-                <a href="#!" class="text-white">Your Account</a>
+                  <a href="#!" class="text-white">Your Account</a>
               </p>
               <p>
-                <a href="#!" class="text-white">Become an Affiliate</a>
+                  <a href="#!" class="text-white">Become an Affiliate</a>
               </p>
               <p>
-                <a href="#!" class="text-white">Shipping Rates</a>
+                  <a href="#!" class="text-white">Help</a>
               </p>
-              <p>
-                <a href="#!" class="text-white">Help</a>
-              </p>
-            </div>
-            <!-- Grid column -->
-
-            <!-- Grid column -->
-            <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
-              <!-- Links -->
-              <h6 class="text-uppercase fw-bold">Contact</h6>
-              <hr class="mb-4 mt-0 d-inline-block mx-auto"
-                style="width: 60px; background-color: #7c4dff; height: 2px" />
-              <p><i class="fas fa-home mr-3"></i> New York, NY 10012, US</p>
-              <p><i class="fas fa-envelope mr-3"></i> chandan@example.com</p>
-              <p><i class="fas fa-phone mr-3"></i> + 01 234 567 88</p>
-              <p><i class="fas fa-print mr-3"></i> + 01 234 567 89</p>
-            </div>
-            <!-- Grid column -->
           </div>
-          <!-- Grid row -->
-        </div>
-      </section>
-      <!-- Section: Links  -->
+          <!-- Grid column -->
 
-      <!-- Copyright -->
-      <div class="text-center p-3" style="background-color: rgba(76, 0, 0, 0.192)">
-        <a class="text-white" href="https://github.com/CodeAvek">© 2023 Copyright</a>
+          <!-- Grid column -->
+          <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+              <!-- Contact -->
+              <h6 class="text-uppercase fw-bold">Contact</h6>
+              <hr class="mb-4 mt-0 d-inline-block mx-auto" style="width: 60px; background-color: #7c4dff; height: 2px" />
+              <p><i class="fas fa-home me-3"></i> New York, NY 10012, US</p>
+              <p><i class="fas fa-envelope me-3"></i> info@example.com</p>
+              <p><i class="fas fa-phone me-3"></i> +1 234 567 89</p>
+          </div>
+          <!-- Grid column -->
       </div>
+      <!-- Grid row -->
+  </section>
+  <!-- Section: Links -->
 
-      <!-- Copyright -->
-    </footer>
-    <!-- Footer -->
-    <!-- End of .container -->
-    <!-- End Footer -->
-    <!-- <script>
-      check.onclick = toggleclick;
-      function toggleclick() {
-        if (check.checked) pass.type = 'text';
-        else pass.type = 'password';
-      }
-
-    </script> -->
+  <!-- Footer Text -->
+  <div class="text-center p-3" style="background-color: rgba(76, 0, 0, 0.192)">
+      <a class="text-white" href="#">© 2024 The Sachin & Chandan Store. All rights reserved.</a>
+  </div>
+  <!-- Footer Text -->
+</footer>
+<!-- Footer -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
       crossorigin="anonymous"></script>
