--- a/templates/orders.html
+++ b/templates/orders.html
@@ -5,7 +5,6 @@
 
 {% block body %}
 <style>
-    /* Custom styles for the table */
 .table {
   width: 100%;
   margin-bottom: 1rem;
@@ -24,13 +23,11 @@
   border-bottom: 2px solid #dee2e6;
 }
 
-/* Add some additional styles for the "Your Orders" heading */
 .display-4 {
   font-size: 2.5rem;
   font-weight: bold;
 }
 
-/* Styling for the "Completed" and "Pending" badges */
 .badge {
   padding: 0.3rem 0.6rem;
   font-size: 0.75rem;
@@ -59,12 +56,6 @@
   object-fit: cover;
 }
 
-/* Additional border and padding for the outer div */
-.border {
-  border: 1px solid #dee2e6;
-  padding: 10px;
-}
-
 /* Remove default list style from ul */
 ul {
   list-style: none;
@@ -74,7 +65,6 @@ ul {
 
 </style>
 <div class="">
-    <div class="border  p-1 m-0">
         <div class="table-responsive-md">
             <p class="display-4 pl-4 ml-4">Your Orders</p>
             <hr>
@@ -89,7 +79,8 @@ ul {
                         <th>Price</th>
                         <th>Quantity</th>
                         <th>Total</th>
-                        <th>Status</th>
+                        <th>Payment</th>
+                        <th>Tracking</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -106,7 +97,12 @@ ul {
                         <td><small class="badge badge-success">Completed</small></td>
                         {% else %}
                         <td><small class="badge badge-warning">Pending</small></td>
-                        {% endif %}                  
+                        {% endif %}
+                        {% if order.is_approved %}
+                        <td><small class="badge badge-success">Approved</small></td>
+                    {% else %}
+                        <td><small class="badge badge-warning">Waiting for Approval</small></td>
+                    {% endif %}
                     </tr>
                     {% endfor %}
                 </tbody>                
