--- a/templates/base.html
+++ b/templates/base.html
@@ -49,7 +49,7 @@
       width: 100%;
       position: absolute;
       height: 100%;
-      background-color: orange;
+      background-color: grey;
       clip-path: polygon(81% 0, 100% 0, 100% 50%, 100% 100%, 65% 100%);
       transition: 1s all;
     }
@@ -57,7 +57,7 @@
     .navbar-brand {
 
       color: #fff;
-      font-family: 'Allerta Stencil', sans-serif;
+      font-family: Raleway;
       margin-bottom: 4px;
       font-size: 27px;
     }
@@ -76,7 +76,7 @@
 
     .navbar-red {
 
-      background-color: red;
+      background-color: rgb(45, 37, 37);
       color: #fff;
 
     }
@@ -174,7 +174,7 @@
  <!-- Footer -->
 <footer class="text-center text-lg-start text-white" style="background-color: #1c2331">
   <!-- Section: Social media -->
-  <section class="d-flex justify-content-between p-4" style="background-color: #ff0000">
+  <section class="d-flex justify-content-between p-4" style="background-color: rgb(45, 37, 37);">
       <!-- Left -->
       <div class="me-5">
           <span>Connect with us on social media:</span>
@@ -226,9 +226,6 @@
               <p>
                   <a href="#!" class="text-white">Become an Affiliate</a>
               </p>
-              <p>
-                  <a href="#!" class="text-white">Help</a>
-              </p>
           </div>
           <!-- Grid column -->
 
@@ -237,7 +234,6 @@
               <!-- Contact -->
               <h6 class="text-uppercase fw-bold">Contact</h6>
               <hr class="mb-4 mt-0 d-inline-block mx-auto" style="width: 60px; background-color: #7c4dff; height: 2px" />
-              <p><i class="fas fa-home me-3"></i> New York, NY 10012, US</p>
               <p><i class="fas fa-envelope me-3"></i> info@example.com</p>
               <p><i class="fas fa-phone me-3"></i> +1 234 567 89</p>
           </div>
@@ -263,7 +259,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
       integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
       crossorigin="anonymous"></script>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
       crossorigin="anonymous"></script>
