--- a/templates/base.html
+++ b/templates/base.html
@@ -190,10 +190,10 @@
           <!-- Grid column -->
           <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
               <!-- Content -->
-              <h6 class="text-uppercase fw-bold">The Sachin & Chandan Store</h6>
+              <h6 class="text-uppercase fw-bold">The Best Store</h6>
               <hr class="mb-4 mt-0 d-inline-block mx-auto" style="width: 60px; background-color: #7c4dff; height: 2px" />
               <p>
-                  Welcome to The Sachin & Chandan Store. We provide high-quality products and excellent customer service.
+                  Welcome to The Best Store. We provide high-quality products and excellent customer service.
               </p>
           </div>
           <!-- Grid column -->
@@ -245,7 +245,7 @@
 
   <!-- Footer Text -->
   <div class="text-center p-3" style="background-color: rgba(76, 0, 0, 0.192)">
-      <a class="text-white" href="#">© 2024 The Sachin & Chandan Store. All rights reserved.</a>
+      <a class="text-white" href="#">© 2024 The Best Store. All rights reserved.</a>
   </div>
   <!-- Footer Text -->
 </footer>
